--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "kobovest": {
+    "1kobo": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -17,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/kobovest",
+            "outputPath": "dist/1kobo",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -72,18 +72,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "kobovest:build"
+            "browserTarget": "1kobo:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "kobovest:build:production"
+              "browserTarget": "1kobo:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "kobovest:build"
+            "browserTarget": "1kobo:build"
           }
         },
         "test": {
@@ -120,18 +120,18 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "kobovest:serve"
+            "devServerTarget": "1kobo:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "kobovest:serve:production"
+              "devServerTarget": "1kobo:serve:production"
             }
           }
         }
       }
     }
   },
-  "defaultProject": "kobovest",
+  "defaultProject": "1kobo",
   "cli": {
     "analytics": "d38d4c73-898e-479d-bc35-938550cc32c7"
   }
