--- a/angular.json
+++ b/angular.json
@@ -25,7 +25,8 @@
             "aot": true,
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              "src/_redirects"
             ],
             "styles": [
               "./node_modules/@fortawesome/fontawesome-free/css/all.min.css",
