--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "@fortawesome/fontawesome-free": "^5.14.0",
     "bootstrap": "^4.5.2",
     "jquery": "^3.5.1",
+    "ngx-custom-validators": "^9.1.0",
     "popper.js": "^1.16.1",
     "rxjs": "~6.5.4",
+    "sweetalert2": "^10.10.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
