--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "@angular/router": "~9.1.0",
     "@fortawesome/fontawesome-free": "^5.14.0",
     "bootstrap": "^4.5.2",
+    "date-fns": "^2.16.1",
     "jquery": "^3.5.1",
     "ngx-custom-validators": "^9.1.0",
+    "ngx-toastr": "^13.1.0",
     "popper.js": "^1.16.1",
     "rxjs": "~6.5.4",
     "sweetalert2": "^10.10.4",
